Closed Bug 612171 Opened 15 years ago Closed 15 years ago

Regression: severe scrolling glitches with GL layers

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta8+

People

(Reporter: bjacob, Assigned: bjacob)

References

Details

Attachments

(1 file, 1 obsolete file)

Since a few days, with GL layers, scrolling often results in large parts of the content being hidden behind a large black rectangle, changing position and appearing/disappearing everytime I scroll again. The problem only exists with layers.accelerate-all=true Regression window: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0f17e5f1eb01&tochange=35dfd6a0ace7 CC'ing people who made possibly relevant commits in this window.
blocking2.0: --- → ?
Attached patch fix bug (obsolete) — Splinter Review
Based on Joe's idea. When APPLE_client_storage is absent, mBackingSurface is always null, so the condition forcing to repaint everything was always true. Not sure how it resulted in these glitches, but this patch restores the former logic when that extension is absent, fixing the glitches.
Attachment #490703 - Flags: review?(joe)
Comment on attachment 490703 [details] [diff] [review] fix bug I'd prefer an if (APPLE_client_storage) instead of the ternary operator.
Attachment #490703 - Flags: review?(joe) → review-
Attached patch fix bugSplinter Review
Here you go! Please proof-read the logic, I confirm it works here (extension absent), haven't tried with the extension present, but I have carefully reread it.
Attachment #490703 - Attachment is obsolete: true
Attachment #490714 - Flags: review?(joe)
Assignee: nobody → bjacob
blocking2.0: ? → beta8+
Attachment #490714 - Flags: review?(joe) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: