Bug 612171 - Regression: severe scrolling glitches with GL layers - r=joe, a=blocking-beta8